objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Assignment_Group__c</fullName>
        <description>.</description>
        <label>Account Assignment Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01 - Domestic Revenues</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 - Foreign Revenues</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 - Affiliat Comp Revenu</label>
                </value>
                <value>
                    <fullName>P1</fullName>
                    <label>PY - Serviço Buffet</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <label>P2 - PY - Serviço Limpiez</label>
                </value>
                <value>
                    <fullName>P3</fullName>
                    <label>P3 - PY - Enfermería</label>
                </value>
                <value>
                    <fullName>Z1</fullName>
                    <label>Z1 - Mosaic Domestic Rev</label>
                </value>
                <value>
                    <fullName>Z2</fullName>
                    <label>Z2 - Mosaic Foreign Rev</label>
                </value>
                <value>
                    <fullName>Z3</fullName>
                    <label>Z3 - Mosaic Inter-Company</label>
                </value>
                <value>
                    <fullName>Z4</fullName>
                    <label>Z4 - Cargill Domestic</label>
                </value>
                <value>
                    <fullName>Z6</fullName>
                    <label>Z6 - Mosaic Affl Domestic</label>
                </value>
                <value>
                    <fullName>Z7</fullName>
                    <label>Z7 - Mosaic Affl Foreign</label>
                </value>
                <value>
                    <fullName>Z8</fullName>
                    <label>Z8 - CargillAffl Domestic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Account Manager)</relationshipLabel>
        <relationshipName>AccountManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_to_partner_related__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill-to partner related</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Bill-to</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Bill-to partner related)</relationshipLabel>
        <relationshipName>BilltoPartner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commissions_agent_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commissions agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Commissions agent)</relationshipLabel>
        <relationshipName>CommissionsAgent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Region_Attribute_6__c</fullName>
        <label>Country Region – Attribute 6</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>06A</fullName>
                    <label>Attribute 06A</label>
                </value>
                <value>
                    <fullName>06B</fullName>
                    <label>Attribute 06B</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AE</fullName>
                    <label>Utd.Arab Emir.</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua/Barbuda</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AN</fullName>
                    <label>Dutch Antilles</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>APA</fullName>
                    <label>Asia/Pacific</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>Samoa, America</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia-Herz.</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BF</fullName>
                    <label>Burkina Faso</label>
                </value>
                <value>
                    <fullName>BG</fullName>
                    <label>Bulgaria</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BI</fullName>
                    <label>Burundi</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BL</fullName>
                    <label>Saint Barthelem</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Serv_Rep_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cust Serv Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Other</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Cust Serv Rep)</relationshipLabel>
        <relationshipName>CustServRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cust_Serv_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cust Serv Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Cust Serv Rep)</relationshipLabel>
        <relationshipName>ContactsCustServRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <description>.</description>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01 - Industry</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 - Canal - Basic / Grow</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 - Dealers</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04 - Commissioner</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>05 - Customer Group 05</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>06 - Exports</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>07 - Direct Sale</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>08 - Sale Retail</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>09 - Elevator</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 - Store e-Commerce</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11 - Other Accounts</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12 - Buying Group</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13 - Co-operative</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>14 - Livestock Farmer</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15 - EU - KAM Mega Farmer</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>16 - Blender</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>17 - EU -Farmer/Mid/Small</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>18 - Farmer cof/citr/pere</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>19 - EU - Mega Farmer</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>21 - Premix Industry</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>22 - Supplement Industry</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>23 - Independent Farm</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>24 - Coop w/o Integration</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25 - Distributor</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>26 - Long Tail</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>27 - Key Account</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>28 - Promissors</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>29 - Standard</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30 - EU - Top Farmer</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>31 - Canal - Prime</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_buys_via_intercompany_VCO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer buys via intercompany VCO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Broker_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Inform only numbers with maximum 7 characters</inlineHelpText>
        <label>Domestic Broker</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Broker__c</fullName>
        <label>Domestic Broker</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domestic_Broker_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domestic Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Domestic Broker)</relationshipLabel>
        <relationshipName>DomesticBroker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Calculate_Your_R__c</fullName>
        <description>Uses of action &apos;Click Calculate Your Results&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Calculat&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Choose_Region_an__c</fullName>
        <description>Uses of action &apos;Click Choose Region and Crop&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Choose R&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Download_PDF__c</fullName>
        <description>Uses of action &apos;Click Download PDF&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Download&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Register_Now__c</fullName>
        <description>Uses of action &apos;Click Register Now&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Register&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Register_Today__c</fullName>
        <description>Uses of action &apos;Click Register Today&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Register&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Homepage__c</fullName>
        <description>Uses of action &apos;Homepage&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Homepage&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Paused_Video__c</fullName>
        <description>Uses of action &apos;Paused Video&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Paused Video&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Played_Video__c</fullName>
        <description>Uses of action &apos;Played Video&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Played Video&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Submit_Calculator_Requ__c</fullName>
        <description>Uses of action &apos;Submit Calculator Request Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Submit Calcula&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Submit_Form__c</fullName>
        <description>Uses of action &apos;Submit Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Submit Form&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Use_Dealer_Locator_For__c</fullName>
        <description>Uses of action &apos;Use Dealer Locator Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Use Dealer Loc&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_ACN_Insights_Page__c</fullName>
        <description>Uses of action &apos;View ACN Insights Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View ACN Insig&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_AG_College_Page__c</fullName>
        <description>Uses of action &apos;View AG College Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View AG Colleg&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Article_Download__c</fullName>
        <description>Uses of action &apos;View Article Download Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Article D&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Article_Page__c</fullName>
        <description>Uses of action &apos;View Article Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Article P&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Aspire_ROI_Calcul__c</fullName>
        <description>Uses of action &apos;View Aspire ROI Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Aspire RO&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Dealer_Locator_Pa__c</fullName>
        <description>Uses of action &apos;View Dealer Locator Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Dealer Lo&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Microessentials_R__c</fullName>
        <description>Uses of action &apos;View Microessentials ROI Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Microesse&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Nutrient_Removal__c</fullName>
        <description>Uses of action &apos;View Nutrient Removal Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Nutrient &apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Product_Page__c</fullName>
        <description>Uses of action &apos;View Product Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Product P&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Speak_With_a_Rep__c</fullName>
        <description>Uses of action &apos;View Speak With a Rep page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Speak Wit&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_TR_Trial_Data_Pag__c</fullName>
        <description>Uses of action &apos;View TR Trial Data Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View TR Trial &apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Video_Page__c</fullName>
        <description>Uses of action &apos;View Video Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Video Pag&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageActiveUsers__c</fullName>
        <description>Active users count</description>
        <label>Evergage Active Users</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageEngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageEngagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageFilters__c</fullName>
        <description>Evergage matching filters</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Filters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvergageFirstActivity__c</fullName>
        <description>First activity with application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLastActivity__c</fullName>
        <description>Last activity with application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLink__c</fullName>
        <description>Link to the Evergage page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <label>Geocode</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_LegalHoldStatusReason__c</fullName>
        <description>This field is used to store the reason for Legal hold activation and deactivation on an account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Hold Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CLM_LegalHoldStatus__c</fullName>
        <label>Legal Hold Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Hold Inactive</fullName>
                    <default>true</default>
                    <label>Legal Hold Inactive</label>
                </value>
                <value>
                    <fullName>Legal Hold Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPI_IntegrationMessage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC CPI IntegrationMessage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPI_IntegrationStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PMC CPI IntegrationStatus</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FlowAccountVRByPassToggle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow Account VR ByPassToggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentTerms__c</fullName>
        <description>Terms that govern payment of the items in this quote.</description>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C002</fullName>
                    <label>Cash Against Documents</label>
                </value>
                <value>
                    <fullName>C005</fullName>
                    <label>Cash Against Documents - 5 Days From BL</label>
                </value>
                <value>
                    <fullName>C007</fullName>
                    <label>Cash Against Documents - 7 Days From BL</label>
                </value>
                <value>
                    <fullName>C010</fullName>
                    <label>Cash Against Documents- 10 Days From BL</label>
                </value>
                <value>
                    <fullName>C015</fullName>
                    <label>Cash Against Documents - 15 Days From BL</label>
                </value>
                <value>
                    <fullName>C030</fullName>
                    <label>Cash Against Documents - 30 Days From BL</label>
                </value>
                <value>
                    <fullName>C045</fullName>
                    <label>Cash Against Documents - 45 Days From BL</label>
                </value>
                <value>
                    <fullName>C060</fullName>
                    <label>Cash Against Documents - 60 Days From BL</label>
                </value>
                <value>
                    <fullName>C090</fullName>
                    <label>Cash Against Documents - 90 Days From BL</label>
                </value>
                <value>
                    <fullName>C120</fullName>
                    <label>Cash Against Documents - 120 Days From BL</label>
                </value>
                <value>
                    <fullName>C180</fullName>
                    <label>Cash Against Documents - 180 Days From BL</label>
                </value>
                <value>
                    <fullName>D000</fullName>
                    <label>Prepayment</label>
                </value>
                <value>
                    <fullName>D001</fullName>
                    <label>Net 1 Day - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D002</fullName>
                    <label>Net 2 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D003</fullName>
                    <label>Net 3 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D005</fullName>
                    <label>05 Days - Document Lock Date</label>
                </value>
                <value>
                    <fullName>D007</fullName>
                    <label>Net 7 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D010</fullName>
                    <label>Net 10 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D014</fullName>
                    <label>Net 14 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D015</fullName>
                    <label>Net 15 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D017</fullName>
                    <label>Net 17 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D021</fullName>
                    <label>Net 21 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D028</fullName>
                    <label>Net 28 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D029</fullName>
                    <label>Net 29 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D030</fullName>
                    <label>Net 30 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D031</fullName>
                    <label>Net 31 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D035</fullName>
                    <label>Net 35 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D042</fullName>
                    <label>Net 42 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D045</fullName>
                    <label>Net 45 Days - From Invoicing Date</label>
                </value>
                <value>
                    <fullName>D060</fullName>
                    <label>Net 60 Days - From Invoicing Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOffice__c</fullName>
        <label>Sales Office (deprecated)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesSubRegion__c</fullName>
        <label>Sales Sub - Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MG05</fullName>
                </value>
                <value>
                    <fullName>SP06</fullName>
                </value>
                <value>
                    <fullName>AL03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Account_Status__c</fullName>
        <description>GSMD-144 - Updated Picklist value with Invalid.</description>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Delivery_Instruction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Email__c</fullName>
        <description>Specifies the email to be displayed on the portal for Account details.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PMC_DH_StreetNumber__c</fullName>
        <description>This is a street number field and it is OPTIONAL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>